--- a/Modules/LancetHardwareDevice/CMakeLists.txt
+++ b/Modules/LancetHardwareDevice/CMakeLists.txt
@@ -44,7 +44,7 @@ add_definitions(-DARMDCOMBINEDAPI_EXPORTS)
 
 mitk_create_module(
   INCLUDE_DIRS
-     PUBLIC ${ARIEMEDI_INCLUDE}
+     #PUBLIC ${ARIEMEDI_INCLUDE}
      PUBLIC ${AIMOOE_INCLUDE}
      PUBLIC ${Diana_INCLUDE}
      PUBLIC ${Hans_INCLUDE}
@@ -53,7 +53,7 @@ mitk_create_module(
   DEPENDS MitkLancetPrintDataHelper
   PACKAGE_DEPENDS VTK
   PACKAGE_DEPENDS Qt5|Core+Widgets
-  ADDITIONAL_LIBS PUBLIC "${ARIEMEDI_LIB_RELEASE}"
+  #ADDITIONAL_LIBS PUBLIC "${ARIEMEDI_LIB_RELEASE}"
   ADDITIONAL_LIBS PUBLIC "${AIMOOE_LIB_RELEASE}"
   ADDITIONAL_LIBS PUBLIC "${Diana_LIB_RELEASE}"
   ADDITIONAL_LIBS PUBLIC "${Hans_LIB_RELEASE}"
